--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon app.js"
   },
@@ -14,15 +15,15 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-rate-limit": "^7.1.5",
+    "express-rate-limit": "^7.5.0",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.4",
     "rate-limiter": "^0.2.0",
     "swagger-ui-express": "^4.1.6",
-    "xss-clean": "^0.1.1",
+    "xss-clean": "^0.1.4",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
